--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ src/utils/__pycache__/fwd_pass.cpython-314.pyc
 .vscode/settings.json
 src/__pycache__/fwd_pass.cpython-314.pyc
 __pycache__/fwd_pass.cpython-314.pyc
+__pycache__
